--- a/assets/styles/game.css
+++ b/assets/styles/game.css
@@ -1723,7 +1723,7 @@
   }
 
   #bottombar-container {
-    z-index: 2;
+    z-index: 3;
   }
 
   #bottombar-buffer {
